tests/baselines/reference/enumMergeWithExpando.errors.txt
enums.js(2,10): error TS2540: Cannot assign to 'DESC' because it is a read-only property.
enums.js(3,10): error TS2540: Cannot assign to 'ASC' because it is a read-only property.


==== lovefield-ts.d.ts (0 errors) ====
    // bug #27352, crashes from github.com/google/lovefield
    declare namespace lf {
        export enum Order { ASC, DESC }
    }
    
==== enums.js (2 errors) ====
    lf.Order = {}
    lf.Order.DESC = 0;
             ~~~~
!!! error TS2540: Cannot assign to 'DESC' because it is a read-only property.
    lf.Order.ASC = 1;
             ~~~
!!! error TS2540: Cannot assign to 'ASC' because it is a read-only property.
    